@@ -1,0 +1,10 @@
+<html>
+<body>
+top
+<br>
+<div style="height:100px"></div>
+<iframe width="400px" height="100px" src="./iframe-scroll-page-up-down-2.html"></iframe>
+<div style="height:100px"></div>
+bottom
+</body>
+</html>
