@@ -1,0 +1,15 @@
+<html>
+<body contenteditable=true onclick="alert('clicked');">
+<input id="focus1" value="focus here and page up">
+<br>
+2<br>
+3<br>
+4<br>
+5<br>
+6<br>
+7<br>
+8<br>
+9<br>
+<input id="focus2" value="focus here and page down">
+</body>
+</html>
